# freedium-tray

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  window.rs
src-tauri/src/commands/: article.rs  export.rs  history.rs  import.rs  mod.rs  search.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: articles.rs  history.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: article.rs  author.rs  mod.rs
src-tauri/src/scraper/: mod.rs  selectors.rs
src-tauri/src/tray/: handler.rs  menu.rs  mod.rs
src/components/: ContextMenu.tsx  ErrorBoundary.tsx  Header.tsx  ResultList.tsx  SearchBar.tsx  ThemeToggle.tsx  UrlInput.tsx
src/components/article/: ArticleDetail.tsx  ArticleFromUrl.tsx  ArticleSkeleton.tsx  ArticleViewer.tsx  DeleteModal.tsx  SearchInPage.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/mirror/: MirrorInput.tsx  SetupModal.tsx
src/components/providers/: ThemeProvider.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useWindowNavigation.ts
src/pages/: About.tsx  ArticleFromUrlPage.tsx  ArticlePage.tsx  History.tsx  Home.tsx  Landing.tsx  ProxyPage.tsx  Settings.tsx
src/utils/: formatting.ts  mirror.ts
